fix: Prevent line break on natural person identification

--- a/assets/scss/layout/_table.scss
+++ b/assets/scss/layout/_table.scss
@@ -257,6 +257,10 @@ tfoot td {
   }
 }
 
+.cell--nowrap {
+  white-space: nowrap;
+}
+
 .has-unmasked-row {
   color: my.palette('neutral', 'gray');
 
